# codex-telegram-channel

./: .gitignore  README.md  pyproject.toml
config/: access.example.json  telegram.env.example
docs/: CODEX_TELEGRAM_BOT.md
launchd/: com.codex.telegram.plist
plans/: codex-telegram-bot-plan.md
scripts/: codex_telegram_bot.py
tests/: test_codex_telegram_bot.py
